--- a/html/about.html
+++ b/html/about.html
@@ -1,4 +1,4 @@
-<!--Grace Hales 4/6/22-->
+<!--Grace Hales 4/8/22 Tried to use alt, but it didn't work so I used title-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Clean Blog - Start Bootstrap Theme</title>
+        <title>Grace Hales-About Page</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -14,13 +14,14 @@
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="../styles/styles.css" rel="stylesheet" />
         <link href="../styles/mystyles.css" rel="stylesheet" />
     </head>
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="../index.html">Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -35,13 +36,13 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/about-bg.jpg')">
+        <header class="masthead" style="background-image: url('../images/rugrat.jpeg')" title=" Climbing Picture">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
                             <h1>About Me</h1>
-                            <span class="subheading">This is what I do.</span>
+                            <span class="subheading">See my resume below.</span>
                         </div>
                     </div>
                 </div>
@@ -52,9 +53,31 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                        <p class="head"> My Resume</p>
+                        <ol>
+                            <li class="bold"> Education:</li>
+                                <ul>
+                                    <li> Pre-Marketing Student at Brigham Young University (Expected Graduation: 2024)</li>
+                                    <li> High School Graduate (2020)</li>
+                                </ul>
+                            <li class="bold"> Work Experience:</li>
+                                <ul>
+                                    <li>External Media Intern at Their Story is Our Story</li>
+                                    <li> Marketing Intern at Prevail Mental Wellness Academy</li>
+                                    <li>Competitve Climbing Team Coach at The Quarry Climbing Center</li>
+                                    <li>Junior Team Coach at Movement Climbing, Yoga, Fitnes </li>
+                                    <li> Marketing Intern at The Red Cliffs Desert Reserve </li>
+                                </ul>
+                            <li class="bold"> Service:</li>
+                                <ul>
+                                    <li> Assistant to Family Mentor at The International Rescue Committee</li>
+                                    <li> Volunteer at The Internal Rescue Committee</li>
+                                    <li> Youth Group Leader at The Church of Jesus Christ of Latter Day Saints</li>
+                                </ul>
+                        </ol>
+                        <p class="sub"><a href= "https://pitch59.com/card/grace-hales" title="Online Resume" target= "_blank"> See my Online Resume.</a></p>
+                        <p class="sub">Contact Me: ghales6@byu.edu | 222-222-2222</p>
+                        <p><a href="#top">Back to Top</a></p>
                     </div>
                 </div>
             </div>
@@ -90,7 +113,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2022</div>
+                        <div class="small text-center text-muted fst-italic"> &copy; Grace Hales 2022</div>
                     </div>
                 </div>
             </div>
