--- a/html/tableau.html
+++ b/html/tableau.html
@@ -1,17 +1,147 @@
+<!--Grace Hales 4/8/2022-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tableau</title>
+    <title>Grace Hales-Tableau Page</title>
     <link href="../styles/bootstyles.css" rel="stylesheet" />
 </head>
+<!--Nav Bar-->
 <body>
+    <div>
     <ul>
-        <li><a class="active" href="../index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
         <li><a href="tableau.html">Tableau</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a class="active" href="../index.html">Home</a></li>
       </ul>
+    </div>
 </body>
 </html>
+
+<!--Header-->
+<body>
+    <div class="header">
+        <p>Tableau Page</p>
+    </div>
+</body>
+
+<!--Main Content-->
+<!--Q1-->
+<div class= "center" class='tableauPlaceholder' id='viz1649360195832' style='position: relative'><noscript>
+    <a href='#'><img alt='Q1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;YN&#47;YNJCF3T37&#47;1_rss.png' style='border: none' /></a>
+</noscript><object class='tableauViz'  style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+        <param name='embed_code_version' value='3' /> 
+        <param name='path' value='shared&#47;YNJCF3T37' /> 
+        <param name='toolbar' value='yes' />
+        <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;YN&#47;YNJCF3T37&#47;1.png' /> 
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='en-US' />
+        <param name='filter' value='publish=yes' />
+    </object></div>                
+    <script type='text/javascript'>    
+        var divElement = document.getElementById('viz1649360195832'); 
+        var vizElement = divElement.getElementsByTagName('object')[0];                  
+                 vizElement.style.width='900px';vizElement.style.height= '500px';                    
+        var scriptElement = document.createElement('script');                    
+            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+                vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+    </script>
+
+<p class="caption"> This visualtization demonstrates how profits are in each of the 50 states. Profits are strongest in California</p>
+
+<!--Q2-->
+<div class="center" class='tableauPlaceholder' id='viz1649430794537' style='position: relative'><noscript>
+    <a href='#'><img alt='Q2 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bo&#47;Book2_16494306799330&#47;Q2&#47;1_rss.png' style='border: none' /></a>
+</noscript><object class='tableauViz'  style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+        <param name='embed_code_version' value='3' /> 
+        <param name='site_root' value='' />
+        <param name='name' value='Book2_16494306799330&#47;Q2' />
+        <param name='tabs' value='no' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bo&#47;Book2_16494306799330&#47;Q2&#47;1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='en-US' />
+    </object></div>                
+    <script type='text/javascript'>                   
+     var divElement = document.getElementById('viz1649430794537');                   
+      var vizElement = divElement.getElementsByTagName('object')[0];                    
+                vizElement.style.width='900px';vizElement.style.height='500px';                    
+      var scriptElement = document.createElement('script');                    
+          scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+               vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+    </script>
+
+<p class="caption"> This visualtization illustrates how profitable California has been by month over the past 2 years.</p>
+
+
+<!--Q3-->
+<div class= "center" class='tableauPlaceholder' id='viz1649432032344' style='position: relative'><noscript><a href='#'>
+    <img alt='Q3 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bo&#47;Book3_16494320242300&#47;Q3&#47;1_rss.png' style='border: none' /></a>
+</noscript><object class='tableauViz'  style='display:none;'>
+    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+    <param name='embed_code_version' value='3' /> 
+    <param name='site_root' value='' /><param name='name' value='Book3_16494320242300&#47;Q3' />
+    <param name='tabs' value='no' /><param name='toolbar' value='yes' />
+    <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bo&#47;Book3_16494320242300&#47;Q3&#47;1.png' /> 
+    <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' />
+    <param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' />
+    <param name='display_count' value='yes' /><param name='language' value='en-US' />
+    <param name='filter' value='publish=yes' />
+</object></div>                
+<script type='text/javascript'>                    
+    var divElement = document.getElementById('viz1649432032344');                    
+    var vizElement = divElement.getElementsByTagName('object')[0];                    
+            vizElement.style.width='900px';vizElement.style.height='500px';                  
+    var scriptElement = document.createElement('script');                    
+        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+</script>
+
+<p class="caption"> This visualtization displays profits for each product catagory in California. Office Supplies are the most profitable.</p>
+
+<!--Q4-->
+<div class= "center" class='tableauPlaceholder' id='viz1649439269877' style='position: relative'><noscript><a href='#'>
+    <img alt='Q4 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bo&#47;Book4_16494392511970&#47;Q4&#47;1_rss.png' style='border: none' /></a>
+</noscript><object class='tableauViz'  style='display:none;'>
+    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+    <param name='embed_code_version' value='3' /> <param name='site_root' value='' />
+    <param name='name' value='Book4_16494392511970&#47;Q4' /><param name='tabs' value='no' />
+    <param name='toolbar' value='yes' />
+    <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bo&#47;Book4_16494392511970&#47;Q4&#47;1.png' /> 
+    <param name='animate_transition' value='yes' />
+    <param name='display_static_image' value='yes' />
+    <param name='display_spinner' value='yes' />
+    <param name='display_overlay' value='yes' />
+    <param name='display_count' value='yes' />
+    <param name='language' value='en-US' />
+    <param name='filter' value='publish=yes' />
+</object></div>                
+<script type='text/javascript'>                    
+    var divElement = document.getElementById('viz1649439269877');                    
+    var vizElement = divElement.getElementsByTagName('object')[0];                    
+            vizElement.style.width='900px';vizElement.style.height='500px';     
+    var scriptElement = document.createElement('script');                    
+        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+            </script>
+
+
+<p class="caption"> This visualtization depicts sales forecasts through November 2015 in California.</p>
+<a href="#top">Back to Top</a>
+<!--Footer-->
+<body>
+    <div class="footer"> &copy;Grace Hales 2022 | <a href= "https://www.tableau.com/" title="Tableau" target= "_blank"> See Tableau.com</a>
+    </div>
+</body>
